[package]
name = "km-init"
version = "0.1.0"
edition = "2024"

[dependencies]
nk = { git = "https://github.com/Urriverse/nanokit.git", branch = "main" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
